name:                CommanderPro
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/CommanderPro#readme
license:             BSD3
license-file:        LICENSE
author:              Drew Holzworth
maintainer:          drew.holzworth@gmail.com
copyright:           2019 Drew Holzworth
category:            Hardware
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable CommanderPro
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hidapi,
                       colour,
                       bytestring,
                       gtk3,
                       mtl,
                       regex-compat,
                       text
  other-modules:       Protocol,
                       Options,
                       Comms